--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "start-electron-ts": "tsc && npm run electron"
   },
   "dependencies": {
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
